# ONSAS

./: .gitignore  .travis.yml  CITATION.cff  CNAME  CONTRIBUTING.md  DESCRIPTION  ONSAS.m  Project.toml  README.md  currentFileHeader.txt  fontsizeSet.m  makeAndPreview.sh  makeAndPreviewDocs.sh  miss_hit.cfg  onsasGUI.m  runTestLocal.sh  runTestProblems.m  runTests.sh  runTestsOctave.sh  salida.txt  updateLicenseHeaders.m
dev/: .documenter-siteinfo.json  bringONSASmFilesToONSASdocs.m  index.html  m2md.m  objects.inv  search_index.js
docs/: Project.toml  about_docs.md  generateDocs.sh  list_of_examples.md  locally_generate_docs.sh  make.jl
examples/: Cross.m  Grid_vtk_bug.m  Kdiff  PenduloNL_HHT.m  PenduloNL_Newmrk.m  VonMisesTrussNMNLDynamics.m  VonMisesTrussNRAL.m  auxVars.mat  aux_toyHeatTransferExample.m  cylinder.geo  cylinder.m  cylinder.msh  cylinderESMAC.m  cylinderTESTProblem.m  example02_staticVonMisesTruss_test.m  example03_uniformCurvatureCantilever_test.m  example04_deployableRing.m  example04_simplePendulum.m  example06_simplePendulum.m  example08_rightAngleCantileverBeam.m  example09_extensionSVKSolid_test.m  example_dxf3DTrussTower.m  example_simplePendulum.m  example_uniformCurvatureCantilever_test.m  export_ONSAS_docs_example.m  generateExamplesDocs.m  geometry_extensionSVK.geo  geometry_extensionSVK.msh  geometry_uniaxialExtension.geo  geometry_uniaxialExtension_dense.msh  linearBeamElement_test.m  listOfExamples.csv  myVMLoadFunc.m  onsasExample_1DHeatTransfer.m  onsasExample_BeamTrussJoint_test.m  (+48 more)
paper/: paper.md  (+1 more)
utils/: Makefile  pyproject.toml
(+2203 files in other folders)
